# wait

./: .gitignore  Cargo.toml  README.md  build.rs  icon.rc
.cargo/: config.toml
src/: main.rs
src/app/: custom_popup.rs  mod.rs  widgets.rs
src/app/steam/: data.rs  error.rs  manifest.rs  mod.rs
src/utils/: manifest.rs  mod.rs  settings.rs  steam.rs
ui/: appwindow.slint
