[package]
name = "wait"
version = "0.1.0"
authors = ["Paul Cameron <kd8ogdtfrespect@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.3.1"
image = "0.25.1"
native-windows-gui = "1.0.13"
open = "5.1.3"
regex = "1.10.4"
registry = "1.2.3"
serde_json = "1.0.117"
slint = "1.6"
sysinfo = "0.30.12"
tokio = { version = "1.37.0", features = ["full"] }
utfx = "0.1.0"

[build-dependencies]
slint-build = "1.6"
embed-resource = "2.4.2"