[package]
name = "wait"
version = "0.1.0"
authors = ["Paul Cameron <kd8ogdtfrespect@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.3.1"
image = "0.25.4"
native-windows-gui = "1.0.13"
open = "5.3.0"
regex = "1.11.0"
registry = "1.2.3"
serde_json = "1.0.132"
slint = "1.8.0"
sysinfo = "0.32.0"
tokio = { version = "1.40.0", features = ["full"] }
utfx = "0.1.0"

[build-dependencies]
slint-build = "1.6"
embed-resource = "2.5.0"