[package]
name = "wait"
version = "0.2.1"
authors = ["ttuples"]
edition = "2021"
build = "build.rs"

[dependencies]
eframe = { version = "0.29.1", features = ["persistence"] }
egui = "0.29.1"
egui_extras = { version = "0.29.1", features = ["all_loaders"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
image = { version = "0.25.4", default-features = false, features = ["jpeg", "png"] }
regex = "1.11.0"
sysinfo = "0.32.0"
registry = "1.2.3"
utfx = "0.1.0"
win_dialog = "1.0.1"
egui_grid = "0.5.1"
open = "5.3.0"
egui_json_tree = "0.7.1"
simple-logging = "2.0.2"
log = "0.4.22"

[build-dependencies]
embed-resource = "2.5.0"

[profile.dev]
debug = 0
strip = "debuginfo"
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
anic = 'abort'
debug = 0
strip = "debuginfo"

[profile.distribution]
inherits = "release"
strip = true
lto = "thin"
codegen-units = 1
